2010-05-06  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* generator/genTopologyCore.sh: Adding a new big parameter setting.

	* generator/runScriptAT.sh: Automatically kill left-over dlv.

	* generator/Module.cpp: Incorporating higher arity predicate.

	* include/dlvhex/MLPSolver.hpp: Fixing some bug when print some interpretation.
	* testsuite/TestMLPSolver.cpp: Likewise.

2010-05-02  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* generator/summaryAT.sh: Handle time-out and mem-out.
	* generator/summaryStatsAT.sh: Likewise.

	* generator/stats.awk: Fixed standard deviation computation when handling one entry.

	* generator/runScriptET.sh: Fixing the prompted message.
	* generator/summaryAT.sh: Likewise.

	* generator/genTopologyCore.sh: Create a new, bigger testsuite.

	* generator/runScriptAT.sh: Change memory limit up to 2Gb.

2010-04-29  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* generator/genTopologyCore.sh: Fixing the prompted message.
	* generator/runScriptAT.sh: Likewise.
	* generator/runScriptET.sh: Likewise.
	* generator/summaryAT.sh: Likewise.

	* generator/runScriptAT.sh: Adding interactive dialog if the result dir is exist.
	* generator/genTopologyCore.sh: Likewise.
	* generator/summaryAT.sh: Likewise.
	* generator/runScriptET.sh: Likewise.

	* include/dlvhex/MLPSolver.hpp: Fixing some references.

2010-04-28  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/MLPSolver.hpp: Adding functional time information and fixing some references.

2010-04-27  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* generator/Benchmark-Module.zip: Adding benchmark files.
	* generator/Benchmark-Stats.zip: Likewise.
	* generator/Benchmark-Summary.zip: Likewise.


	* generator/runScriptAT.sh: Put command as the 1st param.
	* generator/runScriptET.sh: Likewise.

2010-04-26  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* generator/genTopologyCore.sh: Fixing bug in creating result directory.
