@@ -1,3 +1,7 @@
+2010-05-07  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
+
+	* generator/Module.cpp: Smarter random arity predicate.
+
 2010-05-06  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
 
 	* generator/genTopologyCore.sh: Adding a new big parameter setting.
